# circe

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: schema-docs.yml
analysis/: neurotransmitter_reconciliation.csv  neurotransmitter_reconciliation.md  pharynx-communities.html  pharynx-motifs.html  pharynx_communities.py  pharynx_communities_results.json  pharynx_motif_analysis.py  pharynx_motif_results.json  reconcile_neurotransmitters.py
data/bhatla-2015-i2/: MANIFEST.md  i2_synapses.csv
data/bhattacharya-2019-innexin/: MANIFEST.md  innexin_expression.csv  innexin_genes.csv
data/cook-2019-connectome/: MANIFEST.md
data/cook-2020-pharynx/: MANIFEST.md  SI3_combined_synapse_list.csv  SI6_gene_expression.xlsx  aggregate_edges.py  edges.csv  si6_genes.csv
data/curation/: MANIFEST.md  anatomy_curation.csv  atlas_only_cells.csv  class_anatomy_curation.csv  connection_endpoint_cells.csv  cook_anatomy_curation.csv  cook_curation_worklist.csv  cook_name_aliases.csv  cook_wormatlas_class.csv  dataset_life_stage.csv  neurotransmitter_curation.csv
data/hardege-betaine-rim/: MANIFEST.md  (+1 more)
docs/: PLANNING.md
scripts/: canonicalize_ttl.py  gen-schema-docs.sh  serve-sparql.sh  serve_sparql.py
tests/: test_bhatla_2015.py  test_build.py  test_class_anatomy.py  test_cook_2019.py  test_cook_2020.py  test_cook_curation.py  test_curation.py  test_endpoint_cells.py  test_export.py  test_innexin_expression.py  test_neuron_graph_projection.py  test_neurotransmitter.py  test_nt_curation.py  test_schema.py  test_sex_build.py  test_verify.py  test_wormatlas_links.py  test_yim_2024_dauer.py
(+46 files in other folders)
