[project]
name = "celegans-connectome-kg"
version = "0.1.0"
description = "Convert neuron-graph C. elegans connectivity data into a LinkML-modeled, WBBT-grounded knowledge graph."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Raymond Lee" }]
dependencies = [
    "linkml>=1.8",
    "linkml-runtime>=1.8",
    "rdflib>=7.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
cckg = "celegans_connectome_kg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/celegans_connectome_kg"]

[tool.ruff]
line-length = 100
target-version = "py310"
